CMake cleanup including CUDA optimisation flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,25 @@
 cmake_minimum_required(VERSION 2.8.11) # for target_include_directories
 project(libcloudph++ CXX C)
-if (NOT CMAKE_CXX_COMPILER)
-  message(FATAL_ERROR "
-    No C++ compiler found. 
-    Please install one (e.g. sudo apt-get install g++).
-    If needed, point CMake to it (e.g. cmake -DCMAKE_CXX_COMPILER=/usr/lib/gcc-snapshot/bin/g++).
-  ")
+
+# using include() istead of find_package(libcloudph++) to use local CMake code
+# and not the system-installed one
+include(${CMAKE_SOURCE_DIR}/libcloudph++-config.cmake)
+if (NOT libcloudphxx_FOUND)
+  message(FATAL_ERROR "local libcloudph++-config.cmake not found!")
 endif()
 
 # requireing C++11 and pointing to local headers
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wfatal-errors -I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
-set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native")
-  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${libcloudphxx_CXX_FLAGS_RELEASE}")
+  set(CMAKE_CXX_FLAGS_RELEASE "")
+else()
+  set(CMAKE_CXX_FLAGS_DEBUG ${libcloudphxx_CXX_FLAGS_DEBUG})
 endif()
 
-# requireing Thrust
+############################################################################################
+# Thrust
 include(CheckCXXSourceCompiles)
 check_cxx_source_compiles("
     #define THRUST_DEVICE_SYSTEM THRUST_DEVICE_SYSTEM_CPP
@@ -25,32 +27,53 @@ check_cxx_source_compiles("
     int main() {}
   " THRUST_FOUND)
 if (NOT THRUST_FOUND)
-  message(FATAL_ERROR "
-    Thrust library not found. 
-    Please install it (e.g. sudo apt-get install libthrust-dev).
+  message(FATAL_ERROR "Thrust library not found. 
+
+* To install Thrust, please try:
+*   Debian/Ubuntu: sudo apt-get install libthrust-dev
+*   Fedora: TODO
+*   Homebrew: TODO
   ")
 endif()
 
-# note: commenting out the line below is a quick way of switching off CUDA
+############################################################################################
+# CUDA
 find_package(CUDA QUIET)
+if (NOT CUDA_FOUND)
+  message(STATUS "CUDA not found. 
+
+* CUDA support will not be compiled.
+* To install CUDA, please try:
+*   Debian/Ubuntu: sudo apt-get install nvidia-cuda-toolkit
+*   Fedora: TODO
+*   Homebrew: TODO
+  ")
+endif()
 
 set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
-# TODO: propagate optimisation flags to nvcc
 
-# TODO: detecd CUDA arch (native functionality would be best?)
+#set(TMP "-DBOOST_NOINLINE=__attribute__\ \(\(noinline\)\)'") # TODO! (to build in Debug mode)
 if (CUDA_FOUND)
-  set(CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20 -gencode arch=compute_30,code=sm_30 -I${CMAKE_SOURCE_DIR}/include ${CUDA_NVCC_FLAGS}")
-  if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG")
+  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_20,code=sm_20")
+  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_30,code=sm_30")
+  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -I${CMAKE_SOURCE_DIR}/include")
+  
+  if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG -O3 -use_fast_math -Xcompiler=\"-Ofast -march=native -DNDEBUG\"")
+  else()
+    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -g")
   endif()
+
   add_definitions(-DCUDA_FOUND)
 endif()
 
 # generate a header file with git revision id
-add_custom_target(git_revision.h
- git log -1 "--format=format:#define GIT_REVISION \"%H\"%n" HEAD > include/libcloudph++/git_revision.h
- WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} VERBATIM
-)
+if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
+  add_custom_target(git_revision.h
+   git log -1 "--format=format:#define GIT_REVISION \"%H\"%n" HEAD > include/libcloudph++/git_revision.h
+   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} VERBATIM
+  )
+endif()
 
 add_subdirectory(src) 
 
