making .travis.yml compatible with new locaiton of icice

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,18 +62,17 @@ script:
 
     ## icicle (no tests - just checking if any changes in libmpdata's API did not break compilation of icicle)
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get install --no-install-recommends -t trusty -y libboost-program-options-dev; fi
-    - git clone --depth=1 git://github.com/igfuw/icicle.git
-    - cd icicle
+    - cd libcloudphxx/tests/paper_GMD_2015
     - mkdir build 
     - cd build
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ../; fi # Travis default is not the packaged one
     - cmake -DCMAKE_BUILD_TYPE=Release ../ 
     - make
+    - cd ../../../..
 
     ## drops.py (it is written in Python so no compilation, just unit tests)
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get install python-h5py; fi 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
-    - cd ../..
     - git clone --depth=1 git://github.com/igfuw/drops.py.git
     - cd drops.py
     - mkdir build
