forcing icicle to use local libcloudph++

--- a/tests/paper_GMD_2015/src/CMakeLists.txt
+++ b/tests/paper_GMD_2015/src/CMakeLists.txt
@@ -28,7 +28,10 @@ target_include_directories(icicle PUBLIC ${libmpdataxx_INCLUDE_DIRS})
 find_package(Boost COMPONENTS thread iostreams system timer program_options filesystem REQUIRED)
 target_link_libraries(icicle ${Boost_LIBRARIES})
 
-#TODO: check if it's there
-target_link_libraries(icicle cloudphxx_lgrngn)
+find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn ${CMAKE_SOURCE_DIR}/../../build/src)
+if (NOT libmpdataxx_LIBRARIES)
+  message(FATAL_ERROR "libclouphxx++ not found")
+endif()
+target_link_libraries(icicle ${libcloudphxx_LIBRARIES})
 
 install(TARGETS icicle DESTINATION bin)
