installing CMake config file; fixing library list there

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,10 @@ add_subdirectory(tests)
 
 add_subdirectory(include) 
 add_subdirectory(bindings) 
+
+install(
+  FILES
+    libcloudph++-config.cmake
+  DESTINATION
+    share/libcloudph++
+)
