add info which libcloudphxx version will be used by icicle

--- a/tests/paper_GMD_2015/src/CMakeLists.txt
+++ b/tests/paper_GMD_2015/src/CMakeLists.txt
@@ -30,6 +30,12 @@ target_link_libraries(icicle ${Boost_LIBRARIES})
 
 # search for a local version of libcloudphxx
 find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn ${CMAKE_SOURCE_DIR}/../../build/src NO_DEFAULT_PATH)
+if (libcloudphxx_LIBRARIES)
+  message("icicle will use libclouphxx++ from current repository")
+else()
+  message("libcloudphxx++ not found in current repository, icicle will use an installed version")
+endif()
+
 # if no local version found, look for an installed one
 find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn)
 
