--- a/.travis.yml
+++ b/.travis.yml
@@ -79,3 +79,9 @@ script:
     - cd build
     - cmake ..
     - make test || cat Testing/Temporary/LastTest.log / # "/" intentional! (just to make cat exit with an error code)
+
+    ## parcel
+    - git clone --depth=1 git://github.com/igfuw/parcel.git
+    - cd parcel
+    - py.test -s -v unit_test
+    - py.test -s -v long_test
