--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ script:
 
     ## parcel
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get install --no-install-recommends -t trusty -y python-matplotlib python-gnuplot; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx'   ]]; then sudo pip install matplotlib gnuplot-py; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx'   ]]; then sudo pip install http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
     - git clone --depth=1 git://github.com/igfuw/parcel.git
     - cd parcel
     - py.test -s -v unit_test
