use local headers in tests when using local libcloudph++

--- a/tests/paper_GMD_2015/src/CMakeLists.txt
+++ b/tests/paper_GMD_2015/src/CMakeLists.txt
@@ -32,6 +32,7 @@ target_link_libraries(icicle ${Boost_LIBRARIES})
 find_library(libcloudphxx_LIBRARIES cloudphxx_lgrngn ${CMAKE_SOURCE_DIR}/../../build/src NO_DEFAULT_PATH)
 if (libcloudphxx_LIBRARIES)
   message("icicle will use libclouphxx++ from current repository")
+  set(libcloudphxx_local "TRUE" PARENT_SCOPE)
   target_include_directories(icicle PUBLIC ${CMAKE_SOURCE_DIR}/../../include)
 else()
   message("libcloudphxx++ not found in current repository, icicle will use an installed version")
