--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${libcloudphxx_CXX_FLAGS_RELEASE}")
   set(CMAKE_CXX_FLAGS_RELEASE "")
 else()
-  set(CMAKE_CXX_FLAGS_DEBUG ${libcloudphxx_CXX_FLAGS_DEBUG})
+  set(CMAKE_CXX_FLAGS_DEBUG "${libcloudphxx_CXX_FLAGS_DEBUG} -DTHRUST_DEBUG")
 endif()
 
 ############################################################################################
