pass fopenmp to Xcompiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-#TODO: pass fopenmp to Xcompiler of nvcc for multi GPU?!
+#TODO: openmp debug flags for multi_CUDA backend
 
 cmake_minimum_required(VERSION 2.8.11) # for target_include_directories
 project(libcloudph++ CXX C)
@@ -101,7 +101,8 @@ if (CUDA_FOUND)
   set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -I${CMAKE_SOURCE_DIR}/include")
   
   if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG -O3 -use_fast_math -Xcompiler=-Ofast,-march=native,-DNDEBUG")
+    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG -O3 -use_fast_math
+        -Xcompiler=-Ofast,-march=native,-DNDEBUG,-fopenmp")
   else()
     set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -g -DTHRUST_DEBUG \"-DBOOST_NOINLINE=__attribute__((noinline))\"")
 # do not use -G flag on travis since it causes build to fail; probably due to memory shortage
