--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,14 +103,7 @@ if (CUDA_FOUND)
         -Xcompiler=-Ofast,-march=native,-DNDEBUG,-fopenmp")
   else()
     set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -g -DTHRUST_DEBUG -lineinfo
-        \"-DBOOST_NOINLINE=__attribute__((noinline))\" -Xcompiler=-fopenmp,-g
-# non-synchronizing default stream to make copies between GPUs async with
-# respect to thrust launches (to be checked in nvvp)
-# alternative: explicitly specify other streams in thrust calls in copy code
-# TODO: not needed? see
-# http://on-demand.gputechconf.com/gtc-express/2011/presentations/StreamsAndConcurrencyWebinar.pdf
-  #      -default-stream=per-thread
-       ")  
+        \"-DBOOST_NOINLINE=__attribute__((noinline))\" -Xcompiler=-fopenmp,-g")  
 
 # do not use -G flag on travis since it causes build to fail; probably due to memory shortage
     if(NOT DEFINED ENV{TRAVIS})
