disable icicle compilation on travis g++ machine

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ script:
     - cd build
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ../; fi # Travis default is not the packaged one
     - cmake -DCMAKE_BUILD_TYPE=Release ../ 
-    - make
+    - if [[ $CXX == 'clang++' ]]; then make; fi # disable compilation on the CUDA machine with g++ - it has not enough memory to compile icicle
     - cd ../../../..
 
     ## drops.py (it is written in Python so no compilation, just unit tests)
