--- a/.travis.yml
+++ b/.travis.yml
@@ -97,5 +97,5 @@ script:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then echo 'import sys; sys.path.insert(1, "/usr/local/lib/python2.7/site-packages")' >> /Users/travis/Library/Python/2.7/lib/python/site-packages/homebrew.pth; fi
     - git clone --depth=1 git://github.com/igfuw/parcel.git
     - cd parcel
-    - py.test -s -v unit_test
-    - py.test -s -v long_test
+    #- py.test -s -v unit_test
+    #- py.test -s -v long_test
