--- a/tests/paper_GMD_2015/tests/CMakeLists.txt
+++ b/tests/paper_GMD_2015/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-add_subdirectory(fig_a)
-add_subdirectory(fig_b)
-add_subdirectory(fig_c)
+#add_subdirectory(fig_a)
+#add_subdirectory(fig_b)
+#add_subdirectory(fig_c)
+add_subdirectory(sandbox)
