--- a/.travis.yml
+++ b/.travis.yml
@@ -97,5 +97,7 @@ script:
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-matplotlib python-gnuplot gnuplot-nox; fi
     - git clone --depth=1 git://github.com/igfuw/parcel.git
     - cd parcel
+    - mkdir plots
+    - mkdir plots/outputs
     - py.test unit_test
     - py.test long_test
