--- a/.travis.yml
+++ b/.travis.yml
@@ -95,9 +95,8 @@ script:
 
     ## parcel
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-matplotlib python-gnuplot gnuplot-nox; fi
-
+    # TODO - change back after this pull and pull from parcel repo is accepted
     #- git clone --depth=1 git://github.com/igfuw/parcel.git
-
     - git clone -b sstp_chem git://github.com/trontrytel/parcel.git
     - cd parcel
     - mkdir plots/outputs
