fix mktmp -d for osx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if (CUDA_FOUND)
   # trying to figure out compute capability of the current 
   message(STATUS "Trying to obtain CUDA capability of local hardware...")
   set(pfx "compute cabability check")
-  execute_process(COMMAND "mktemp" "-d" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
+  execute_process(COMMAND "mktemp" "-d" "tmp.XXX" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
   if (NOT status EQUAL 0) 
     message(FATAL_ERROR "${pfx}: mkdtemp failed")
   endif()
@@ -124,7 +124,7 @@ endif()
 # BOOST ODEINT VERSION TEST
 message(STATUS "Testing if Boost ODEINT version >= 1.58")
 set(pfx "boost odeint check")
-execute_process(COMMAND "mktemp" "-d" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
+execute_process(COMMAND "mktemp" "-d" "tmp.XXX" RESULT_VARIABLE status OUTPUT_VARIABLE tmpdir)
 if (NOT status EQUAL 0) 
   message(FATAL_ERROR "${pfx}: mkdtemp failed")
 endif()
