fix include order

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ unset(output)
 ############################################################################################
 
 # CUDA
-find_package(CUDA QUIET)
+#find_package(CUDA QUIET)
 if (NOT CUDA_FOUND)
   message(STATUS "CUDA not found. 
 
