look for boost.mpi in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,10 @@ unset(msg)
 unset(status)
 unset(output)
 
+# if compiled with MPI support, we need Boost.MPI for python tests to work
+if(USE_MPI)
+  find_package(Boost COMPONENTS mpi QUIET)
+endif()
 ############################################################################################
 
 # CUDA
