--- a/tests/paper_GMD_2015/tests/CMakeLists.txt
+++ b/tests/paper_GMD_2015/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory(fig_a)
 add_subdirectory(fig_b)
 add_subdirectory(fig_c)
+add_subdirectory(chem_sandbox)
