--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,11 +140,6 @@ file(WRITE "${tmpdir}/test.cpp" "
   
   #include <thrust/system/cpp/vector.h>
   
-  #include <boost/numeric/odeint.hpp>
-  #include <boost/numeric/odeint/external/thrust/thrust_algebra.hpp>
-  #include <boost/numeric/odeint/external/thrust/thrust_operations.hpp>
-  #include <boost/numeric/odeint/external/thrust/thrust_resize.hpp>
-  
   struct rhs 
   {
     void operator()(
@@ -158,17 +153,9 @@ file(WRITE "${tmpdir}/test.cpp" "
   
   int main() 
   { 
-    boost::numeric::odeint::euler<
-      thrust::cpp::vector<float>, // state_type
-      float,                      // value_type
-      thrust::cpp::vector<float>, // deriv_type
-      float,                      // time_type
-      boost::numeric::odeint::thrust_algebra,
-      boost::numeric::odeint::thrust_operations 
-    > chem_stepper;
-  
-    thrust::cpp::vector<float> v(11);
-    chem_stepper.do_step(rhs(), v, 0, 1);
+    thrust::cpp::vector<float> v1(11);
+    thrust::cpp::vector<float> v2(22);
+    rhs()(v1, v2, 0);
   }
 ")
 execute_process(COMMAND "${CMAKE_CXX_COMPILER}" "test.cpp" WORKING_DIRECTORY ${tmpdir} RESULT_VARIABLE status ERROR_VARIABLE msg)
