simpler test to fail for thrust (vol2)?

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gnuplot; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then mkdir -p /Users/travis/Library/Python/2.7/lib/python/site-packages; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then echo 'import sys; sys.path.insert(1, "/usr/local/lib/python2.7/site-packages")' >> /Users/travis/Library/Python/2.7/lib/python/site-packages/homebrew.pth; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install scipy; fi
+#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install scipy; fi
 
 script:
     # libcloudph++ 
